Fix: Issues #3; Add: Docs on various languages